--- a/css.css
+++ b/css.css
@@ -1,8 +1,13 @@
+html, body {
+  position:relative;
+  overflow-x:hidden;
+}
+
 *{
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
-    overflow-x: hidden;
+    
   }
   nav{
       display: flex;
