--- a/css.css
+++ b/css.css
@@ -580,7 +580,7 @@ body, html {
   #footer .columns{
     display: flex;
     width: 500px;
-    justify-content: left;
+    justify-content: space-around;
     
 }
   
