--- a/css.css
+++ b/css.css
@@ -582,7 +582,7 @@ body, html {
   #footer .columns{
     display: flex;
     width: 500px;
-    justify-content: space-around;
+    justify-content: space-evenly;
     
 }
 
